[package]
name = "minifb"
version = "0.20.0"
license = "MIT or Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "Cross-platform window setup with optional bitmap rendering"
keywords = ["windowing", "window", "framebuffer"]
categories = ["rendering"]
repository = "https://github.com/emoon/rust_minifb"
documentation = "https://docs.rs/minifb/0.15/minifb"
build = "build.rs"
edition = "2018"
readme = "README.md"

exclude = [
  "resources/"
]

[badges]
maintenance = {status = "actively-developed"}

[dev-dependencies]
png = "0.17"

[build-dependencies]
cc = "1.0"

[dependencies]
raw-window-handle = "0.4"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "wingdi",
    "libloaderapi",
    "errhandlingapi"
]

[features]
default = ["wayland", "x11"]
x11 = ["x11-dl", "xkb", "libc"]
wayland = ["wayland-client", "wayland-protocols", "wayland-cursor", "tempfile", "xkb", "xkbcommon-sys"]

[target.'cfg(not(any(target_os = "macos", target_os = "redox", windows)))'.dependencies]
wayland-client = {version = "0.29", optional = true}
wayland-protocols = { version = "0.29", features = ["client", "unstable_protocols"], optional = true }
wayland-cursor = {version = "0.29", optional = true}
tempfile = {version = "3.2", optional = true}
xkb = {version = "0.2.1", optional = true}
xkbcommon-sys = {version = "0.7.5", optional = true}
x11-dl = {version = "2.19.1", optional = true}
libc = {version = "0.2.107", optional = true}

[target.x86_64-unknown-redox.dependencies]
orbclient = "0.3.20"
