[package]
name = "minifb"
version = "0.28.0"
license = "MIT OR Apache-2.0"
authors = ["Daniel Collin <daniel@collin.com>"]
description = "Cross-platform window setup with optional bitmap rendering"
keywords = ["windowing", "window", "framebuffer"]
categories = ["rendering"]
repository = "https://github.com/emoon/rust_minifb"
documentation = "https://docs.rs/minifb/0.15/minifb"
build = "build.rs"
edition = "2018"
readme = "README.md"

exclude = ["examples/resources/"]

[[example]]
name = "wasm"
crate-type = ["cdylib"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
png = "0.17"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.56", features = [
  "Blob",
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Gamepad",
  "GamepadButton",
  "GamepadEvent",
  "Headers",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "Navigator",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Url",
  "Window",
  "console",
  'KeyboardEvent',
  'MouseEvent',
] }
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }

[build-dependencies]
cc = "1.0"

[dependencies]
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = ["winuser", "wingdi", "libloaderapi", "errhandlingapi", "fileapi"]

[features]
# default = ["wayland", "x11", "dlopen"]
default = ["wayland", "x11"]
# dlopen = ["wayland-client/dlopen"]
x11 = ["x11-dl", "libc"]
wayland = [
  "dlib",
  "lazy_static",
  "libc",
  "tempfile",
  "wayland-client",
  "wayland-cursor",
  "wayland-protocols",
]

[target.'cfg(not(any(target_os = "macos", target_os = "redox", windows, target_arch="wasm32")))'.dependencies]
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", features = [
  "client",
], optional = true }
wayland-cursor = { version = "0.31", optional = true }
tempfile = { version = "3.3", optional = true }
x11-dl = { version = "2.19.1", optional = true }
libc = { version = "0.2.107", optional = true }
dlib = { version = "0.5", optional = true }
lazy_static = { version = "1.0", optional = true }

[target.x86_64-unknown-redox.dependencies]
orbclient = "0.3.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.12", features = ["wasm-bindgen", "inaccurate"] }
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4.29"
serde = { version = "1.0.136", features = ["derive"] }
serde_derive = "1.0.123"
futures = "0.3.12"
console_error_panic_hook = "0.1.7"
# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
web-sys = { version = "0.3.56", features = [
  "Blob",
  "CanvasRenderingContext2d",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "Gamepad",
  "GamepadButton",
  "GamepadEvent",
  "Headers",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "Navigator",
  "Node",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Url",
  "Window",
  "console",
  'KeyboardEvent',
  'MouseEvent',
] }
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
